implementing jpa and adapting the sql files and daos logic + adding repositories and handling dependency injection