@@ -1,6 +1,7 @@
 package org.example.stockage;
 
-import org.example.data.QuestionDTO;
+import org.example.model.business.Question;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
 import java.util.List;
@@ -10,72 +11,65 @@ import static org.junit.jupiter.api.Assertions.*;
 
 class QuestionIMDAOTest {
 
-    @Test
-    void get () {
-        QuestionIMDAO questionIMDAO = new QuestionIMDAO();
-        QuestionDTO questionDTO = new QuestionDTO(-1, "What?", "yes");
-        int id = questionIMDAO.create(questionDTO);
-        Optional<QuestionDTO> optional = questionIMDAO.get(id);
-        assertTrue(optional.isPresent());
+    private QuestionIMDAO questionIMDAO;
 
-        Optional<QuestionDTO> optional2 = questionIMDAO.get(90);
+    @BeforeEach
+    void setUp() {
+        questionIMDAO = new QuestionIMDAO();
+    }
+
+    @Test
+    void create() {
+        Question question = new Question("What?", "yes");
+        Long id = questionIMDAO.create(question);
+        Optional<Question> optional = questionIMDAO.get(id);
+        assertTrue(optional.isPresent());
+        assertEquals("What?", optional.get().getAskedQuestion());
+        assertEquals("yes", optional.get().getAnswer());
+
+        Optional<Question> optional2 = questionIMDAO.get(90L);
         assertTrue(optional2.isEmpty());
     }
 
     @Test
-    void get_and_create() {
-        QuestionIMDAO questionIMDAO = new QuestionIMDAO();
-        QuestionDTO questionDTO = new QuestionDTO(-1, "What?", "yes");
-        int id = questionIMDAO.create(questionDTO);
-        assertTrue(id >= 0);
-        Optional<QuestionDTO> res = questionIMDAO.get(id);
-        assertTrue(res.isPresent());
-        assertEquals("What?", res.get().question());
-        assertEquals("yes", res.get().answer());
-    }
-
-    @Test
     void delete() {
-        QuestionIMDAO.clear();
-        QuestionIMDAO questionIMDAO = new QuestionIMDAO();
-        QuestionDTO questionDTO = new QuestionDTO(-1, "What?", "yes");
-        questionIMDAO.create(questionDTO);
+        Question question = new Question("What?", "yes");
+        Long id = questionIMDAO.create(question);
+        Optional<Question> res = questionIMDAO.get(id);
+        assertTrue(res.isPresent());
 
-        QuestionDTO questionDTO2 = new QuestionDTO(0, "What?", "yes");
-        questionIMDAO.delete(questionDTO2);
-        Optional<QuestionDTO> res = questionIMDAO.get(0);
-        assertFalse(res.isPresent());
+        Question question2 = new Question("What?", "yes");
+        question2.setId(id);
+        questionIMDAO.delete(question2);
+        Optional<Question> res2 = questionIMDAO.get(id);
+        assertTrue(res2.isEmpty());
     }
 
     @Test
     void update() {
-        QuestionIMDAO questionIMDAO = new QuestionIMDAO();
-        QuestionDTO questionDTO = new QuestionDTO(-1, "What?", "yes");
-        int id = questionIMDAO.create(questionDTO);
+        Question question = new Question("What?", "yes");
+        Long id = questionIMDAO.create(question);
 
-        QuestionDTO questionDTO2 = new QuestionDTO(id, "What?", "no");
-        questionIMDAO.update(questionDTO2);
-        Optional<QuestionDTO> res = questionIMDAO.get(id);
+        Question question2 = new Question("What?", "no");
+        question2.setId(id);
+        questionIMDAO.update(question2);
+        Optional<Question> res = questionIMDAO.get(id);
         assertTrue(res.isPresent());
-        assertEquals("What?", res.get().question());
-        assertEquals("no", res.get().answer());
+        assertEquals("no", res.get().getAnswer());
 
-        QuestionDTO questionDTO3 = new QuestionDTO(100, "What?", "no");
-        questionIMDAO.update(questionDTO3);
-        Optional<QuestionDTO> res2 = questionIMDAO.get(100);
+        Question question3 = new Question("What?", "no");
+        question3.setId(100L);
+        questionIMDAO.update(question3);
+        Optional<Question> res2 = questionIMDAO.get(100L);
         assertTrue(res2.isEmpty());
     }
 
     @Test
     void getAll() {
-        QuestionIMDAO.clear();
-        QuestionIMDAO questionIMDAO = new QuestionIMDAO();
-        QuestionDTO questionDTO = new QuestionDTO(-1, "What?", "yes");
-        questionIMDAO.create(questionDTO);
-
-        List<QuestionDTO> questions = questionIMDAO.getAll();
+        Question question = new Question("What?", "yes");
+        questionIMDAO.create(question);
+        List<Question> questions = questionIMDAO.getAll();
         assertEquals(1, questions.size());
-        assertEquals("What?", questions.getFirst().question());
-        assertEquals("yes", questions.getFirst().answer());
+        assertEquals("What?", questions.get(0).getAskedQuestion());
     }
 }
